--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -20,10 +20,10 @@
           <%= @customer.address %>
         </p>
 
-        <p>
+        <!-- <p>
           <strong>Opt in:</strong>
-          <%= @customer.optin? ? "Yes" : "No" %>
-        </p>
+          <%#= @customer.optin? ? "Yes" : "No" %>
+        </p> -->
 
         <p>
           <strong>Meal count:</strong>
