Associations between Customer and Plan have been made. Dropdown works.

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -26,8 +26,8 @@
         </p> -->
 
         <p>
-          <strong>Meal count:</strong>
-          <%= @customer.meal_count %>
+          <strong>Meal Plan:</strong>
+          <%= @customer.plan_id %>
         </p>
       </div>
       <div class="card-action">
