--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -38,14 +38,23 @@
     <%= form.text_field :address, id: :customer_address, placeholder: "Address" %>
   </div>
 
+  <div class="input-field">
+    <%#= form.label :plan_id%>
+    <%= form.select :plan_id, options_from_collection_for_select(@plans, "id", "number_and_price"), prompt: "Choose a Plan"  %>
+  </div>
+
+
+
+
+
   <!-- <div class="input-field col s12">
 
 </div> -->
 
-<div class="input-field">
+<!-- <div class="input-field">
   <%#= form.label :meal_count %>
-  <%= form.text_field :meal_count, id: :customer_meal_count, placeholder: "How many meals would you like?"%>
-</div>
+  <%#= form.text_field :meal_count, id: :customer_meal_count, placeholder: "How many meals would you like?"%>
+</div> -->
 
     <%#= form.label :meal_count %>
 
