--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -7,6 +7,7 @@
       <th>Email</th>
       <th>Phone</th>
       <th>Address</th>
+      <th>Meal Plan</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +19,7 @@
         <td><%= customer.email %></td>
         <td><%= customer.phone %></td>
         <td><%= customer.address %></td>
+        <td><%= customer.plan_id %> </td>
         <td><%= link_to 'Show', customer %></td>
         <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
         <td><%= link_to 'Destroy', customer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
