--- a/app/views/layouts/home_page.html.erb
+++ b/app/views/layouts/home_page.html.erb
@@ -2,17 +2,21 @@
 <html>
   <head>
     <title>BrusBrandApp</title>
+  
     <%= csrf_meta_tags %>
 
     <!-- css -->
+
+
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
     <!-- javascript -->
+
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
   </head>
   <body>
-    <main class="container">
+    <main>
       <%= yield %>
     </main>
   </body>
