--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,8 +1,8 @@
 <!-- <header> -->
   <div class="navbar-fixed">
     <nav>
-      <div class="nav-wrapper green">
-        <a href="#!" class="brand-logo">Logo</a>
+      <div class="nav-wrapper">
+        <img class="logo" src="/assets/logo.png" alt="V-logo">
         <ul class="right hide-on-med-and-down">
           <li><a href="sass.html">Sass</a></li>
           <li><a href="badges.html">Components</a></li>
@@ -10,22 +10,56 @@
       </div>
     </nav>
   </div>
-<!-- </header> -->
-<!-- background pic and brussel brand title, mission statement -->
-<div class="brussel-brand">
-  <div class="overlay"></div>
-  <%= image_tag "/assets/paprika-small.jpg", class: "veggies" %>
+  <!-- </header> -->
+  <!-- background pic and brussel brand title, mission statement -->
+  <div class="brussel-brand">
+    <!-- <div class="overlay"></div> -->
+    <%= image_tag "/assets/brusselbrand.png", class: "veggies" %>
+  </div>
+  <div class="section options">
+    <div class="row center">
+      <div class="col s4 green-text">
+        <h3> <a class="green-text" id="mission">Our Mission</a> </h3>
+      </div>
+      <div class="col s4 green-text">
+        <h3><a class="green-text" id="plans">Plans & Pricing</a></h3>
+      </div>
+      <div class="col s4 green-text">
+        <h3><a class="green-text" id="meals">Featured Meals</a></h3>
+      </div>
+    </div>
+  </div>
+
+  <div class="section space">
+
+  </div>
+
+<div class="divider"></div>
+<div class="section">
+  <div class="row container">
+    <div class="col s12">
+      <h1 id="our-mission" class="bbm center">Brussel Brand's Mission</h1>
+        <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
+    </div>
+  </div>
 </div>
-<div class="section options">
-  <div class="row center">
-    <div class="col s4 green-text">
-      <h3>Our Mission</h3>
+
+<div class="divider"></div>
+<div class="section">
+  <div class="row container">
+    <div class="col s12">
+      <h1 id="pricing" class="bbm center">Plans & Pricing</h1>
+        <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
     </div>
-    <div class="col s4 green-text">
-      <h3>Plans & Pricing</h3>
-    </div>
-    <div class="col s4 green-text">
-      <h3>This Week's Meals</h3>
+  </div>
+</div>
+
+<div class="divider"></div>
+<div class="section">
+  <div class="row container">
+    <div class="col s12">
+      <h1 id="featured" class="bbm center">This Week's Meals</h1>
+        <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
     </div>
   </div>
 </div>
