changed mission statement to a card

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -19,13 +19,13 @@
   <div class="section options">
     <div class="row center">
       <div class="col s4 green-text">
-        <h3> <a class="green-text" id="mission">Our Mission</a> </h3>
+        <h3> <a href="" class="green-text" id="mission">Our Mission</a> </h3>
       </div>
       <div class="col s4 green-text">
-        <h3><a class="green-text" id="plans">Plans & Pricing</a></h3>
+        <h3><a href="" class="green-text" id="plans">Plans & Pricing</a></h3>
       </div>
       <div class="col s4 green-text">
-        <h3><a class="green-text" id="meals">Featured Meals</a></h3>
+        <h3><a href="" class="green-text" id="meals">Featured Meals</a></h3>
       </div>
     </div>
   </div>
@@ -35,30 +35,46 @@
   </div>
 
 <div class="divider"></div>
-<div class="section">
+<div id="our-mission" class="section">
+  <!-- <div class="row container">
+    <div class="col s12">
+      <h1 class="bbm center">Brussel Brand's Mission</h1>
+        <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
+    </div>
+  </div> -->
+  <div class="row container">
+  <div class="col s12">
+    <div class="card">
+      <div class="card-image">
+        <img src="/assets/veggies.jpg">
+        <span class="card-title"><h2>Our Mission</h2></span>
+      </div>
+      <div class="card-content">
+        <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui offiia deserunt mollit anim id est laborum.</h5>
+      </div>
+      <div class="card-action">
+        <!-- <a href="#">This is a link</a> -->
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+<div class="divider"></div>
+<div id="pricing" class="section">
   <div class="row container">
     <div class="col s12">
-      <h1 id="our-mission" class="bbm center">Brussel Brand's Mission</h1>
+      <h1 class="bbm center">Plans & Pricing</h1>
         <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
     </div>
   </div>
 </div>
 
 <div class="divider"></div>
-<div class="section">
+<div id="featured" class="section">
   <div class="row container">
     <div class="col s12">
-      <h1 id="pricing" class="bbm center">Plans & Pricing</h1>
-        <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
-    </div>
-  </div>
-</div>
-
-<div class="divider"></div>
-<div class="section">
-  <div class="row container">
-    <div class="col s12">
-      <h1 id="featured" class="bbm center">This Week's Meals</h1>
+      <h1 class="bbm center">This Week's Meals</h1>
         <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
     </div>
   </div>
