--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,5 +14,4 @@
  *= require_self
  */
 
- @import "materialize";
- @import "https://fonts.googleapis.com/icon?family=Material+Icons";
+ /* @import "materialize"; */
