--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,65 +1,22 @@
-<%= form_with(model: customer, local: true) do |form| %>
-  <% if customer.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(customer.errors.count, "error") %> prohibited this customer from being saved:</h2>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@customer) do |f| %>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
 
-      <ul>
-      <% customer.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+      <%= f.label :email %>
+      <%= f.email_field :email %>
 
-  <form action="#">
-    <p>
-      <!-- <input type="checkbox" id="optin" /> -->
-      <%#= form.check_box :optin, id: :customer_optin %>
-      <%#= form.label "Would you like meals this week?", for: :customer_optin  %>
-    </p>
+      <%= f.label :password %>
+      <%= f.password_field :password %>
 
-  <div class="input-field">
-    <%#= form.label :name %>
-    <%= form.text_field :name, id: :customer_name, placeholder: "Name" %>
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation %>
+
+      <%= f.label :plan_id  %>
+      <%= f.select :plan_id, options_from_collection_for_select( @plans, "id", "number_and_price"), prompt: "Choose a Plan", class: "meals" %>
+
+      <%= f.submit "Create my account", class: "btn btn-primary" %>
+    <% end %>
   </div>
-
-  <div placeholder="Email" class="input-field">
-    <%#= form.label :email %>
-    <%= form.text_field :email, id: :customer_email, placeholder: "Email"  %>
-  </div>
-
-  <div class="input-field">
-    <%#= form.label :phone %>
-    <%= form.text_field :phone, id: :customer_phone, placeholder: "Phone" %>
-  </div>
-
-  <div class="input-field">
-    <%#= form.label :address%>
-    <%= form.text_field :address, id: :customer_address, placeholder: "Address" %>
-  </div>
-
-  <div class="input-field">
-    <%#= form.label :plan_id%>
-    <%= form.select :plan_id, options_from_collection_for_select(@plans, "id", "number_and_price"), prompt: "Choose a Plan"  %>
-  </div>
-
-
-
-
-
-  <!-- <div class="input-field col s12">
-
-</div> -->
-
-<!-- <div class="input-field">
-  <%#= form.label :meal_count %>
-  <%#= form.text_field :meal_count, id: :customer_meal_count, placeholder: "How many meals would you like?"%>
-</div> -->
-
-    <%#= form.label :meal_count %>
-
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
