added bootstrap gem

--- a/app/views/layouts/home_page.html.erb
+++ b/app/views/layouts/home_page.html.erb
@@ -16,8 +16,8 @@
 
   </head>
   <body>
-    <main>
+    <div id="main-container" class="container-fluid">
       <%= yield %>
-    </main>
+    </div>
   </body>
 </html>
