--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,14 +1,15 @@
 <!-- <header> -->
 
+<div class="container-fluid">
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">
-      <img class="logo" src="/assets/logo.png" alt="V-logo">
+      <img class="logo" src="/assets/logo.png" width="55" height="55" class="d-inline-block align-top" alt="V-logo">
     </a>
   </nav>
   <!-- </header> -->
   <!-- background pic and brussel brand title, mission statement -->
-  <div class="container-fluid brussel-brand">
+  <div class="brussel-brand">
     <!-- <div class="overlay"></div> -->
     <%= image_tag "/assets/brusselbrand.png", class: "veggies" %>
   </div>
@@ -74,4 +75,5 @@
       <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
     </div>
   </div>
+</div>
 </div>
