--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -30,6 +30,16 @@
   color: white;
 }
 
+.head {
+  margin-bottom: 0em !important;
+}
+
+.background-bb {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
+
+
 // .navbar-inverse .navbar-nav li a {
 //   color: #D5D5D5;
 // }
@@ -52,7 +62,7 @@ a:active {
 }
 
 .veggies {
-  width: 100%;
+  width: 100% !important;
 }
 
 .veg-pic {
@@ -69,5 +79,33 @@ position:absolute;
 width:100%;
 height:100%;
 background-color: black;
-opacity: 0.3;
+opacity: 0.6;
 }
+
+// .how-it-works {
+//   padding: 0;
+// }
+//
+// .list-view {
+//   border-bottom: #8f8f8f solid 1px;
+//   display: table;
+//   width: 100%;
+//   margin: 0;
+// }
+//
+// .list-col-first {
+//   background: #E0E0E0;
+//   width: 6.666667%;
+//   display: table-cell;
+//   float: none;
+//   text-align: center;
+//   vertical-align: middle;
+//   font-size: 30px;
+// }
+//
+// .list-col-second {
+//   display: table-cell;
+//   float: none;
+//   width: 51.666667%;
+//   vertical-align: middle;
+// }
