--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,5 +1,5 @@
 <!-- <header> -->
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-inverse head">
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -20,26 +20,77 @@
     </div>
   </nav>
   <!-- </header> -->
+
   <!-- background pic and brussel brand title, mission statement -->
-  <div class="container-fluid">
+  <div class="container-fluid background-bb">
     <img class="veggies" src="/assets/brusselbrand.png" alt="picture of logo">
   </div>
-  <!-- <div class="brussel-brand">
-    <%= image_tag "/assets/brusselbrand.png", class: "veggies" %>
-  </div>
-  <div class="section options">
-    <div class="row center">
-      <div class="col s4 green-text">
-        <h3> <a href="" class="green-text" id="mission">Our Mission</a> </h3>
+  <!-- end of background pic -->
+
+  <!-- mid section  inspired by the example site -->
+
+
+  <!-- <div class="how-it-works">
+    <div class="row list-view">
+      <div class="col-xs-12 col-sm-2 list-col-first">1</div>
+      <div class="col-xs-12 col-sm-5 list-col-second">
+        small image goes here
+        <h2></h2>
+        <p></p>
       </div>
-      <div class="col s4 green-text">
-        <h3><a href="" class="green-text" id="plans">Plans & Pricing</a></h3>
-      </div>
-      <div class="col s4 green-text">
-        <h3><a href="" class="green-text" id="meals">Featured Meals</a></h3>
+      <div class="hidden-xs col-xs-12 col-sm-5 service-col-third">
+        image goes here
       </div>
     </div>
-  </div> -->
+    <div class="row list-view">
+      <div class="col-xs-12 col-sm-2 list-col-first">2</div>
+      <div class="col-xs-12 col-sm-5 list-col-second">
+        small image goes here
+        <h2></h2>
+        <p></p>
+      </div>
+      <div class="hidden-xs col-xs-12 col-sm-5 service-col-third">
+        image goes here
+      </div>
+    </div>
+    <div class="row list-view">
+      <div class="col-xs-12 col-sm-2 list-col-first">3</div>
+      <div class="col-xs-12 col-sm-5 list-col-second">
+        small image goes here
+        <h2></h2>
+        <p></p>
+      </div>
+      <div class="hidden-xs col-xs-12 col-sm-5 service-col-third">
+        image goes here
+      </div>
+    </div>
+  </div>
+end of mid section  -->
+
+
+
+  <!-- menu carousel -->
+  <div id="myCarousel" class="carousel slide container" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="/assets/veggies.jpg" alt="">
+        <div class="carousel-caption">
+          <h1>This Week's Meals</h1>
+          <br>
+          <button type="button" class="btn btn-default">Place Order</button>
+        </div>
+      </div>
+      <div class="item">
+        <img src="/assets/ricebowl.png" alt="">
+      </div>
+    </div>
+  </div>
+
 
 
   <div class="section"></div>
