--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -11,146 +11,155 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#" id="profile">My Account</a></li>
-          <li class="active"><a href="#" id="meals">Menu</a></li>
-          <li class="active"><a href="#" id="plans">Plans & Pricing</a></li>
-          <li class="active"><a href="#" id="mission">The Mission</a></li>
+          <li class=""><a href="#" id="profile">My Account</a></li>
+          <li class=""><a href="#" id="meals" data-toggle="modal" data-target="#myModal">Menu</a></li>
+          <li class=""><a href="#" id="plans">Plans & Pricing</a></li>
+          <li class=""><a href="#" id="mission">The Mission</a></li>
         </ul>
       </div>
     </div>
   </nav>
   <!-- </header> -->
 
-  <!-- background pic and brussel brand title, mission statement -->
-  <div class="container-fluid background-bb">
-    <img class="veggies" src="/assets/brusselbrand.png" alt="picture of logo">
+  <!-- background pic and brussel brand title-->
+  <!-- <div class="container-fluid background-bb">
+    <img class="veggies img-responsive center-block" src="/assets/brusselbrand.png" alt="picture of logo">
+  </div> -->
+
+
+  <div class="container-fluid">
+    <div class="row bb-backdrop">
+      <h2 class="text-center bb-name">Brussel Brand</h2>
+      <h3 class="text-center bb-name2">Live Smart, Eat Healthy, Save Money.</h3><br>
+      <div class="text-center"><button type="button" class="btn">Learn More</button></div>
+      <div class="container-fluid text-center how-it-works">
+        <h2 class="steps">How it works</h2>
+        <div class="row">
+          <div class="col-sm-4">
+            <i class="fas fa-utensils fa-7x"></i>
+            <h4 class="each-step">Sign Up</h4><br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+          <div class="col-sm-4">
+            <i class="fas fa-shopping-basket fa-7x"></i>
+            <h4 class="each-step">Choose a Plan</h4><br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+          <div class="col-sm-4">
+            <i class="fas fa-child fa-7x"></i>
+            <h4 class="each-step">Enjoy</h4><br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+
   <!-- end of background pic -->
 
-  <!-- mid section  inspired by the example site -->
-
-
-  <!-- <div class="how-it-works">
-    <div class="row list-view">
-      <div class="col-xs-12 col-sm-2 list-col-first">1</div>
-      <div class="col-xs-12 col-sm-5 list-col-second">
-        small image goes here
-        <h2></h2>
-        <p></p>
-      </div>
-      <div class="hidden-xs col-xs-12 col-sm-5 service-col-third">
-        image goes here
-      </div>
-    </div>
-    <div class="row list-view">
-      <div class="col-xs-12 col-sm-2 list-col-first">2</div>
-      <div class="col-xs-12 col-sm-5 list-col-second">
-        small image goes here
-        <h2></h2>
-        <p></p>
-      </div>
-      <div class="hidden-xs col-xs-12 col-sm-5 service-col-third">
-        image goes here
-      </div>
-    </div>
-    <div class="row list-view">
-      <div class="col-xs-12 col-sm-2 list-col-first">3</div>
-      <div class="col-xs-12 col-sm-5 list-col-second">
-        small image goes here
-        <h2></h2>
-        <p></p>
-      </div>
-      <div class="hidden-xs col-xs-12 col-sm-5 service-col-third">
-        image goes here
-      </div>
-    </div>
-  </div>
-end of mid section  -->
-
-
-
   <!-- menu carousel -->
-  <div id="myCarousel" class="carousel slide container" data-ride="carousel">
+  <!-- <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="/assets/veggies.jpg" alt="">
+      <div class="item active" width="100%" >
+        <img src="/assets/veggies.jpg" class="img-responsive center-block" alt="">
         <div class="carousel-caption">
           <h1>This Week's Meals</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           <br>
-          <button type="button" class="btn btn-default">Place Order</button>
+          <button type="button" class="btn">Place Order</button>
         </div>
       </div>
-      <div class="item">
-        <img src="/assets/ricebowl.png" alt="">
-      </div>
-    </div>
-  </div>
-
-
-
-  <div class="section"></div>
-
-
-  <div class="container-fluid" id="our-mission">
-    <div class="row">
-      <div class="col-md-6">
-        <h2 class="text-center">Our Mission</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-      <div class="col-md-6">
-        <img src="/assets/veggies.jpg" alt="veggies" class="img-responsive">
-      </div>
-
-    </div>
-
-  </div>
-
-  <!-- <div class="section space">
-
-  </div>
-
-  <div class="divider"></div>
-  <div id="our-mission" class="section">
-    <div class="row container">
-      <div class="col s12">
-        <div class="card">
-          <div class="card-image">
-            <img src="/assets/veggies.jpg">
-            <span class="card-title"><h2>Our Mission</h2></span>
-          </div>
-          <div class="card-content">
-            <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui offiia deserunt mollit anim id est laborum.</h5>
-          </div>
-          <div class="card-action">
-            <a href="#">This is a link</a> -->
-          <!-- </div>
+      <div class="item" width="100%">
+        <img src="/assets/ricebowl.png" class="img-responsive center-block" alt="">
+        <div class="carousel-caption">
+          <h2>Ricebowl</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
       </div>
+      <div class="item" width="100%">
+        <img src="/assets/new_buffalo.jpg" class="img-responsive center-block" alt="">
+        <div class="carousel-caption">
+          <h2>Buffalo Cauliflower</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+      </div>
+      slide controls
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
   </div> -->
+  <!-- end of carousel -->
 
-<!-- <div class="divider"></div>
-<div id="pricing" class="section">
-  <div class="row container">
-    <div class="col s12">
-      <h1 class="bbm center">Plans & Pricing</h1>
-      <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
+
+
+<div id="myModal" class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">This Week's Meals</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <!-- menu carousel -->
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner" role="listbox">
+            <div class="item active" width="100%" >
+              <img src="/assets/veggies.jpg" class="img-responsive center-block" alt="">
+              <div class="carousel-caption">
+                <h1>This Week's Meals</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <br>
+              </div>
+            </div>
+            <div class="item" width="100%">
+              <img src="/assets/ricebowl.png" class="img-responsive center-block" alt="">
+              <div class="carousel-caption">
+                <h2>Ricebowl</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+            </div>
+            <div class="item" width="100%">
+              <img src="/assets/new_buffalo.jpg" class="img-responsive center-block" alt="">
+              <div class="carousel-caption">
+                <h2>Buffalo Cauliflower</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+            </div>
+            <!--carousel slide controls -->
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+        <!-- end of carousel -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary">Place Order</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
     </div>
   </div>
 </div>
-
-<div class="divider"></div>
-<div id="featured" class="section">
-  <div class="row container">
-    <div class="col s12">
-      <h1 class="bbm center">This Week's Meals</h1>
-      <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
-    </div>
-  </div>
-</div> -->
