--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -122,7 +122,7 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="item active" width="100%" >
-              <img src="/assets/veggies.jpg" class="img-responsive center-block" alt="">
+               <%= image_tag "veggies.jpg", class: "img-responsive center-block" %>
               <div class="carousel-caption">
                 <h1>This Week's Meals</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -130,14 +130,14 @@
               </div>
             </div>
             <div class="item" width="100%">
-              <img src="/assets/ricebowl.png" class="img-responsive center-block" alt="">
+              <img src="/assets/images/ricebowl.png" class="img-responsive center-block" alt="">
               <div class="carousel-caption">
                 <h2>Ricebowl</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
             </div>
             <div class="item" width="100%">
-              <img src="/assets/new_buffalo.jpg" class="img-responsive center-block" alt="">
+              <img src="/assets/images/new_buffalo.jpg" class="img-responsive center-block" alt="">
               <div class="carousel-caption">
                 <h2>Buffalo Cauliflower</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
