changed to image tags

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -7,7 +7,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand-center" href="#"> <img src="/assets/logo.png" width="60" height="60" alt=""> </a>
+        <a class="navbar-brand-center" href="#"> <img src="logo.png" width="60" height="60" alt=""> </a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
@@ -130,14 +130,14 @@
               </div>
             </div>
             <div class="item" width="100%">
-              <img src="/assets/images/ricebowl.png" class="img-responsive center-block" alt="">
+              <%= image_tag "ricebowl.png", class: "img-responsive center-block" %>
               <div class="carousel-caption">
                 <h2>Ricebowl</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
             </div>
             <div class="item" width="100%">
-              <img src="/assets/images/new_buffalo.jpg" class="img-responsive center-block" alt="">
+              <%= image_tag "new_buffalo.jpg", class: "img-responsive center-block" %>
               <div class="carousel-caption">
                 <h2>Buffalo Cauliflower</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
