--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -7,7 +7,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand-center" href="#"> <img src="logo.png" width="60" height="60" alt=""> </a>
+        <a class="navbar-brand-center" href="#"> <%= image_tag "logo.png", size: "60x60" %> </a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
