--- a/app/views/layouts/home_page.html.erb
+++ b/app/views/layouts/home_page.html.erb
@@ -17,6 +17,7 @@
 
   </head>
   <body>
+    <!-- <div class="overlay"></div> -->
     <main class="container-fluid">
       <%= yield %>
     </main>
