--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,3 +1,4 @@
+<div class="bg-img">
 <!-- <header> -->
   <nav class="navbar navbar-inverse head">
     <div class="container-fluid">
@@ -21,13 +22,8 @@
   </nav>
   <!-- </header> -->
 
-  <!-- background pic and brussel brand title-->
-  <!-- <div class="container-fluid background-bb">
-    <img class="veggies img-responsive center-block" src="/assets/brusselbrand.png" alt="picture of logo">
-  </div> -->
-
-
-  <div class="container-fluid">
+  <!-- Top Section-->
+  <div class="container-fluid top-sec">
     <div class="row bb-backdrop">
       <h2 class="text-center bb-name">Brussel Brand</h2>
       <h3 class="text-center bb-name2">Live Smart, Eat Healthy, Save Money.</h3><br>
@@ -55,54 +51,13 @@
     </div>
   </div>
 
-  <!-- end of background pic -->
+  <!-- end of top section -->
 
-  <!-- menu carousel -->
-  <!-- <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-      <div class="item active" width="100%" >
-        <img src="/assets/veggies.jpg" class="img-responsive center-block" alt="">
-        <div class="carousel-caption">
-          <h1>This Week's Meals</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <br>
-          <button type="button" class="btn">Place Order</button>
-        </div>
-      </div>
-      <div class="item" width="100%">
-        <img src="/assets/ricebowl.png" class="img-responsive center-block" alt="">
-        <div class="carousel-caption">
-          <h2>Ricebowl</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-      </div>
-      <div class="item" width="100%">
-        <img src="/assets/new_buffalo.jpg" class="img-responsive center-block" alt="">
-        <div class="carousel-caption">
-          <h2>Buffalo Cauliflower</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-      </div>
-      slide controls
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div> -->
-  <!-- end of carousel -->
+<!-- closing div to bg image -->
+  </div>
+<!-- closing div to bg image -->
 
-
-
+<!-- carousel modal -->
 <div id="myModal" class="modal" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
@@ -121,22 +76,22 @@
             <li data-target="#myCarousel" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner" role="listbox">
-            <div class="item active" width="100%" >
-               <%= image_tag "veggies.jpg", class: "img-responsive center-block" %>
+            <div class="item active">
+               <%= image_tag "menu.png", class: "img-responsive center-block" %>
               <div class="carousel-caption">
-                <h1>This Week's Meals</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <!-- <h1>This Week's Meals</h1> -->
+                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
                 <br>
               </div>
             </div>
-            <div class="item" width="100%">
+            <div class="item">
               <%= image_tag "ricebowl.png", class: "img-responsive center-block" %>
               <div class="carousel-caption">
                 <h2>Ricebowl</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
             </div>
-            <div class="item" width="100%">
+            <div class="item">
               <%= image_tag "new_buffalo.jpg", class: "img-responsive center-block" %>
               <div class="carousel-caption">
                 <h2>Buffalo Cauliflower</h2>
@@ -163,3 +118,4 @@
     </div>
   </div>
 </div>
+<!-- end of modal for carousel -->
