layout and route for sign-up

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -99,6 +99,14 @@ p {
   opacity: 0.8;
 }
 
+#mid-section {
+  margin-top: 10em;
+}
+
+// .mid-sec-1 {
+//   vertical-align: center;
+// }
+
 .bb-name {
   font-family: 'Yellowtail', cursive;
   font-size: 100px;
