--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,5 +1,7 @@
+<div class="container text-center">
 <h1>New Customer</h1>
 
 <%= render 'form', customer: @customer %>
 
 <%= link_to 'Back', customers_path %>
+</div>
