--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,22 +1,30 @@
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@customer) do |f| %>
-      <%= f.label :name %>
-      <%= f.text_field :name %>
 
-      <%= f.label :email %>
-      <%= f.email_field :email %>
 
-      <%= f.label :password %>
-      <%= f.password_field :password %>
-
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation %>
-
-      <%= f.label :plan_id  %>
-      <%= f.select :plan_id, options_from_collection_for_select( @plans, "id", "number_and_price"), prompt: "Choose a Plan", class: "meals" %>
-
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
-    <% end %>
+<!-- <form> -->
+  <%= form_for(@customer) do |f| %>
+   <div class="form-group row">
+       <%= f.label :name %> <br>
+       <%= f.text_field :name %>
+   </div>
+   <div class="form-group">
+     <%= f.label :email %> <br>
+     <%= f.email_field :email %>
+   </div>
+   <div class="form-group">
+     <%= f.label :password %><br>
+     <%= f.password_field :password %>
+   </div>
+   <div class="form-group">
+     <%= f.label :password_confirmation, "Password Confirmation" %><br>
+     <%= f.password_field :password_confirmation %>
+   </div>
+  <div class="form-group">
+    <%#= f.label :plan_id  %>
+    <%= f.select :plan_id, options_from_collection_for_select( @plans, "id", "number_and_price"), prompt: "Choose a Plan", class: "meals" %>
   </div>
-</div>
+
+
+   <button type="submit" class="btn btn-primary">Submit</button>
+   <% end %>
+
+<!-- </form> -->
