--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -12,10 +12,10 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li class=""><a href="#" id="profile">My Account</a></li>
+          <li class=""> <%= link_to "Signup/Login", new_customer_path, id: "profile" %> </li>
           <li class=""><a href="#" id="meals" data-toggle="modal" data-target="#myModal">Menu</a></li>
           <li class=""><a href="#" id="plans">Plans & Pricing</a></li>
-          <li class=""><a href="#" id="mission">The Mission</a></li>
+          <!-- <li class=""><a href="#" id="mission">The Mission</a></li> -->
         </ul>
       </div>
     </div>
@@ -27,7 +27,7 @@
     <div class="row bb-backdrop">
       <h2 class="text-center bb-name">Brussel Brand</h2>
       <h3 class="text-center bb-name2">Live Smart, Eat Healthy, Save Money.</h3><br>
-      <div class="text-center"><button type="button" class="btn">Learn More</button></div>
+      <div class="text-center"><button type="button" class="btn" id="mid-sec-scroll">Learn More</button></div>
       <div class="container-fluid text-center how-it-works">
         <h2 class="steps">How it works</h2>
         <div class="row">
@@ -56,6 +56,45 @@
 <!-- closing div to bg image -->
   </div>
 <!-- closing div to bg image -->
+
+
+<!-- mid section -->
+<!-- <div class="container-fluid" id="mid-section">
+  <div class="row text-center">
+    <div class="col-sm-4">
+      <h2 class="mid-sec-1">100% Vegan</h2>
+    </div>
+    <div class="col-sm-4">
+      <i class="fas fa-heartbeat fa-7x"></i>
+    </div>
+    <div class="col-sm-4">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+  </div>
+  <div class="row text-center">
+    <div class="col-sm-4">
+      <h2 class="mid-sec-1">100% Fresh</h2>
+    </div>
+    <div class="col-sm-4">
+      <i class="fas fa-heartbeat fa-7x"></i>
+    </div>
+    <div class="col-sm-4">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+  </div>
+  <div class="row text-center">
+    <div class="col-sm-4">
+      <h2 class="mid-sec-1">100% Authentic</h2>
+    </div>
+    <div class="col-sm-4">
+      <i class="fas fa-heartbeat fa-7x"></i>
+    </div>
+    <div class="col-sm-4">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+  </div>
+</div> -->
+<!-- end of midsection -->
 
 <!-- carousel modal -->
 <div id="myModal" class="modal" tabindex="-1" role="dialog">
