--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -51,8 +51,13 @@ body {
   color: black;
 }
 
+
 #profile:hover, #meals:hover, #plans:hover, #mission:hover {
   color: black;
+}
+
+.hamburger {
+  background-color: black !important;
 }
 
 
