--- a/app/views/layouts/home_page.html.erb
+++ b/app/views/layouts/home_page.html.erb
@@ -14,7 +14,7 @@
 
     <!-- javascript -->
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body>
     <!-- <div class="overlay"></div> -->
