--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,7 +1,12 @@
-<div class="container text-center">
-<h1>New Customer</h1>
+<div class="container text-center signup">
+  <!-- <h1>Brussel Brand</h1> -->
+  <h1>
+    <b>Brussel Brand</b><br>
+    Sign up for delicious vegan meals!
+  </h1>
 
-<%= render 'form', customer: @customer %>
+  <%= render 'form', customer: @customer %>
 
-<%= link_to 'Back', customers_path %>
+  <%#= link_to 'Back', customers_path %>
+
 </div>
