--- a/app/assets/stylesheets/customers.scss
+++ b/app/assets/stylesheets/customers.scss
@@ -1,3 +1,48 @@
 // Place all the styles related to the Customers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+input, textarea, button, .uneditable-input {
+  border: 1px solid #bbb;
+  width: 50%;
+  margin-bottom: 15px;
+  // @include box_sizing;
+}
+
+input {
+  height: auto !important;
+}
+
+.signup {
+  padding-top: 10em;
+}
+
+.suf {
+  padding-top: 3em;
+}
+
+label {
+  font-size: 20px;
+}
+
+.ip-area {
+  font-size: 30px;
+  text-align: center;
+}
+
+.btn-primary {
+  font-size: 20px;
+}
+
+// html, body {
+//   min-height: 100%;
+// }
+
+// .overlay {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   z-index: 10;
+//   background-color: rgba(0,0,0,0.5); /*dim the background*/
+// }
