changed font-size for mobile, and fixed the javascript for nav-collapse

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-img">
-<!-- <header> -->
+  <!-- <header> -->
   <nav class="navbar navbar-inverse head">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -20,7 +20,7 @@
       </div>
     </div>
   </nav>
-  <!-- </header> -->
+  <!-- end of header  -->
 
   <!-- Top Section-->
   <div class="container-fluid top-sec">
