--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -59,41 +59,44 @@
 
 
 <!-- mid section -->
-<!-- <div class="container-fluid" id="mid-section">
-  <div class="row text-center">
-    <div class="col-sm-4">
+<div class="container-fluid" id="mid-section">
+
+  <div class="section"></div>
+
+  <div class="row text-center" id="1st-section">
+    <div class="col-sm-6">
+      <i class="fas fa-heartbeat fa-7x"></i>
+    </div>
+    <div class="col-sm-6">
       <h2 class="mid-sec-1">100% Vegan</h2>
-    </div>
-    <div class="col-sm-4">
-      <i class="fas fa-heartbeat fa-7x"></i>
-    </div>
-    <div class="col-sm-4">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
   </div>
-  <div class="row text-center">
-    <div class="col-sm-4">
+
+  <div class="section"></div>
+
+  <div class="row text-center" id="2nd-section">
+    <div class="col-sm-6">
       <h2 class="mid-sec-1">100% Fresh</h2>
-    </div>
-    <div class="col-sm-4">
-      <i class="fas fa-heartbeat fa-7x"></i>
-    </div>
-    <div class="col-sm-4">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
+    <div class="col-sm-6">
+      <i class="fas fa-heartbeat fa-7x"></i>
+    </div>
   </div>
-  <div class="row text-center">
-    <div class="col-sm-4">
+
+  <div class="section"></div>
+
+  <div class="row text-center" id="3rd-section">
+    <div class="col-sm-6">
+      <i class="fas fa-heartbeat fa-7x"></i>
+    </div>
+    <div class="col-sm-6">
       <h2 class="mid-sec-1">100% Authentic</h2>
-    </div>
-    <div class="col-sm-4">
-      <i class="fas fa-heartbeat fa-7x"></i>
-    </div>
-    <div class="col-sm-4">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
   </div>
-</div> -->
+</div>
 <!-- end of midsection -->
 
 <!-- carousel modal -->
